--- a/src/main/webapp/styles.css
+++ b/src/main/webapp/styles.css
@@ -2,7 +2,7 @@
 * {
 	margin: 0; 
 	padding: 0;
-	background: grey;
+	background: #D1D1D1;
 } 
 
 body {
@@ -16,7 +16,7 @@ header, nav, section {
 } 
 
 header, header table, header td, header h1 {
-	background: #2dfa97;
+	background: #AFF0E9;
 }
 
 footer { 
@@ -30,3 +30,13 @@ nav a{
 .margin-left{
 	margin-left: 10px;
 }
+
+form {
+    margin-left: 50px;
+}
+
+input {
+    display: block;
+    margin-top: 10px;
+}
+
